# duri-bugi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UI_IMPROVEMENTS.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_messages.py  seed_mock.py
alembic/: env.py
alembic/versions/: 0f3a791753e2_add_sort_order_to_stock_holdings.py  2f1edb3484b4_add_linked_account_id_to_stock_accounts.py  56a2f27cf695_add_duplicate_status_to_raw_messages.py  8606017a730d_initial_schema.py  982fdf094b0e_add_asset_management_tables.py  a7e8099bdbfc_add_exchange_to_stock_holdings.py  e8819ed7c572_convert_created_at_utc_to_kst.py  eac83d0f3b66_add_tag_memos_table.py  eb4485c43af2_add_brokerage_and_account_type_to_stock_.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: accounts.py  assets.py  auth.py  dashboard.py  messages.py  rules.py  transactions.py  webhook.py
app/routers/assets/: __init__.py  _helpers.py  realestate.py  stock.py  summary.py
app/services/: account_lookup.py  ai_parser.py  audit.py  duplicate_detection.py  ledger.py  stock_price.py
app/static/: app.js  index.html  manifest.json  style.css  sw.js
app/static/js/: accounts.js  assets.js  dashboard.js  entries.js  messages.js  pin.js  report.js  settings.js  utils.js
tests/: conftest.py  test_accounts.py  test_dashboard.py  test_transactions.py  test_webhook.py
